# KEMOJO

./: .gitignore  README.md
.github/workflows/: commit.yml
firmware/: CMakeLists.txt  config.h  firmware.fuses.conf  firmware.ino  ikbd.c  ikbd.h  joy.h  ps2.cpp  ps2.h  ps2_keyboard.cpp  ps2_keyboard.h  ps2_mouse.cpp  ps2_mouse.h  scan_code_maps_flash.c  util.cpp  util.h
firmware/cmake/: toolchain.cmake
firmware/lib/arduino/core/: CMakeLists.txt
hardware/: ATMEGA328P.kicad_sym  KEMOJO.kicad_pcb  KEMOJO.kicad_pro  KEMOJO.kicad_sch  KEMOJO_mouser.txt  PC16550D.kicad_sym  fp-lib-table  sym-lib-table
hardware/bom/: ibom_V1B.html
